--- a/_posts/2013-07-15-blog-post-1.html
+++ b/_posts/2013-07-15-blog-post-1.html
@@ -2,12 +2,8 @@
 title: Blog Post 1
 layout: post
 category: post
-tags: [how-to, jekyll]
+tags: how-to, jekyll
 ---
-
-<h1>Blog Post 1</h1>
-<h3>HTML format</h3>
-
 <p>Here is a testing blog post.</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
