revert to md index

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <link href="http://fonts.googleapis.com/css?family=Numans|Scada:400,700" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <header>
-        <h1>
-          <a href="http://jannypie.github.io" rel="bookmark" title="Jan Dennison">Jan Dennison</a>
-        </h1>
-        <p>Front End Developer</p>
-    </header>
+
     <nav>
       <ul>
         <li><a href="#introduction">Introduction</a></li>
@@ -80,7 +75,7 @@
         </article>
       </aside>
     </main>
-    <footer id="introduction">
+    <footer id="intro">
       <img src="images/janstache.png" alt="Janstache">
       <aside>
         <h3>Why, hello there</h3>
