--- a/archive.html
+++ b/archive.html
@@ -4,7 +4,7 @@ title: "Jan Dennison | Front End Developer"
 meta-description: "Web development portfolio blog by Jan Dennison"
 meta-robots: "noodp, noydir"
 ---
-<section class="">
+<section class="container">
   <h1>Writings on Web Development</h1>
   {% for post in site.posts %}
     {% if post.categories contains 'dbc' %}
