fix nav links and header on pages

--- a/archive.html
+++ b/archive.html
@@ -1,5 +1,5 @@
 ---
-layout: "default"
+layout: "page"
 title: "Jan Dennison | Front End Developer"
 meta-description: "Web development portfolio blog by Jan Dennison"
 meta-robots: "noodp, noydir"
