configure jekyll collection for projects

--- a/_posts/project-template.html
+++ b/_posts/project-template.html
@@ -1,8 +1,6 @@
 ---
-layout: "post"
-excerpt: ""
+layout: "page"
 title: ""
 meta-description: ""
 image: "/assets/post-images/"
-categories: "project"
 ---
