--- a/_projects/2015-05-07-project-anf-responsive.html
+++ b/_projects/2015-05-07-project-anf-responsive.html
@@ -1,14 +1,20 @@
 ---
 layout: "page"
-title: "A&amp;F Responsive Design &amp; Code"
+title: "Prototype Transition of Existing A&amp;F Mobile/Desktop Websites to Responsive Design &amp; Codebase"
 meta-description: "Prototyped merging mobile and desktop codebases and designs into unified responsive approach"
-image: "/assets/post-images/anf-pdp-mid.png"
+image: "/assets/project-images/anf-pdp-mid.png"
 ---
-<span class="meta">Project Timespan: Nov - Dec 2014</span>
-<div class="col-third"><img src="/assets/post-images/anf-pdp-mid.png" alt="Screenshot of Responsive Project"></div>
+<div class="col-third">
+  <img src="/assets/project-images/anf-pdp-mid.png" alt="Screenshot of Responsive Project">
+  <img src="/assets/project-images/anf-6plus.jpg" alt="Screenshot of Responsive Project">
+</div>
 <div class="col-twothird">
-  <p>Analyzed existing mobile and desktop code and devised an efficient, mobile-first approach to merging the two bases into an easier-to-maintain unified design.</p>
-  <p>Special focus was placed on the header navigation, balancing important links with space available and dropping the hamburger menu as soon as possible.</p>
-  <video id="anf-rwd-vid" src="/assets/post-images/anf-rwd-header.mp4" controls></video>
+  <h2>Project Timespan: Nov - Dec 2014</h2>
+  <p>Evaluated existing mobile and desktop code and devised an efficient, mobile-first approach to merging the two bases into an easier-to-maintain unified design.</p>
+  <p>Created prototypes for major elements of the website, such as the header and product page. Special focus was placed on the header navigation, balancing important links with space available and dropping the hamburger menu as soon as possible.</p>
+  <video id="anf-rwd-vid" src="/assets/project-images/anf-rwd-header.mp4" controls></video>
   <small>Play video to see my responsive header design in action</small>
+  <h2>Lessons Learned:</h2>
+  <p>Prototyping from existing code bases was made easier by selecting the most complex view (desktop) and minimizing the screen until the layout broke. Next, observing the smallest screen for key points that would make sense to transition to more information - for example, getting rid of the hamburger icon as soon as main gender categories had space.</p>
+  <p>Because of the extensive CSS bases for each site, it helped most to break the CSS up starting with desktop CSS, and then identifying code changes for increasingly smaller breakpoints. However, I then flipped the code blocks, starting with the mobile and adding CSS as the viewport increased in size, so that the CSS had a mobile-first approach.</p>
 </div>
