update page description

--- a/imlooking.html
+++ b/imlooking.html
@@ -1,7 +1,7 @@
 ---
 layout: "page"
 title: "Looking for Work"
-meta-description: "Web development by Jan Dennison"
+meta-description: "Web developer, Jan Dennison"
 meta-robots: "noodp, noydir"
 ---
 <section class="container">
