correct post description

--- a/_projects/2015-06-05-project-jitterapp.html
+++ b/_projects/2015-06-05-project-jitterapp.html
@@ -2,7 +2,7 @@
 layout: "page"
 excerpt: "A simple single-page app using Backbone.js, Sass and HTML"
 title: "Jitter - Single Page App"
-meta-description: "A simple single-page app using jQuery, CSS and HTML"
+meta-description: "A simple single-page app using Backbone.js, Sass and HTML"
 image: "/assets/project-images/jitter.jpg"
 ---
 <div class="col-third">
