update and add web projects

--- a/_projects/2015-05-04-project-pure-css-taj-mahal.html
+++ b/_projects/2015-05-04-project-pure-css-taj-mahal.html
@@ -10,4 +10,6 @@ image: "/assets/project-images/pure-css-taj.jpg"
 <div class="col-twothird">
   <h2>Spring 2014</h2>
   <p><a href="http://codepen.io/jannypie/pen/kbdDg" class="button inline">See it on Codepen</a></p>
+  <p>HTML, CSS/Scss</p>
+  <hr>
 </div>
