--- a/_projects/2015-05-05-project-anf-parallax-experience.html
+++ b/_projects/2015-05-05-project-anf-parallax-experience.html
@@ -8,6 +8,8 @@ image: "/assets/project-images/2014-anf-parallax.jpg"
   <img src="/assets/project-images/2014-anf-parallax.jpg" alt="Spring 2014 Parallax">
 </div>
 <div class="col-twothird">
-  <h2>Project Timespan: Spring 2014</h2>
+  <h2>Spring 2014</h2>
+  <p>HTML, CSS/Scss, JS/jQuery</p>
+  <hr>
   <p>Built extensive marketing experience page with parallaxing images at 60 FPS. Over 40 images implemented viewport animation with scrolling.</p>
 </div>
