--- a/_projects/2015-06-04-project-todoapp.html
+++ b/_projects/2015-06-04-project-todoapp.html
@@ -10,6 +10,9 @@ image: "/assets/project-images/todoapp.jpg"
 </div>
 <div class="col-twothird">
   <h2>June 2015</h2>
-  <p>Demonstrating using only jQuery to create a simple dynamic single page application, without using a javascript framework.</p>
   <p><a href="http://codepen.io/jannypie/pen/oXZQgp" class="button inline">See it on Codepen</a></p>
+  <p>Design, HTML, CSS, jQuery</p>
+  <hr>
+  <h3>Challenge</h3>
+  <p>Demonstrate a simple dynamic single page application using jQuery. Items entered into the text field should be appended to the task list without page reload.</p>
 </div>
