--- a/_projects/2015-06-05-project-jitterapp.html
+++ b/_projects/2015-06-05-project-jitterapp.html
@@ -10,6 +10,9 @@ image: "/assets/project-images/jitter.jpg"
 </div>
 <div class="col-twothird">
   <h2>June 2015</h2>
-  <p>Demonstrating using Backbone.js to create a simple dynamic single page application.</p>
   <p><a href="http://codepen.io/jannypie/pen/PqpVjR" class="button inline">See it on Codepen</a></p>
+  <p>Design, HTML, Sass, Backbone.js, jQuery</p>
+  <hr>
+  <h3>Challenge</h3>
+  <p>Build a Twitter-like single-page application with Backbone.js. Text entered into form field should append to the stream without pageload.</p>
 </div>
