--- a/_projects/2015-06-08-project-signupform.html
+++ b/_projects/2015-06-08-project-signupform.html
@@ -10,6 +10,9 @@ image: "/assets/project-images/signupform.jpg"
 </div>
 <div class="col-twothird">
   <h2>June 2015</h2>
-  <p>Code sample: Create a form that meets the <a href="http://bit.ly/1KltUXp" title="signup form kata">requirements</a>.</p>
   <p><a href="http://codepen.io/jannypie/pen/bdWVYb" class="button inline">See it on Codepen</a></p>
+  <p>Design, HTML, CSS, JS</p>
+  <hr>
+  <h3>Challenge</h3>
+  <p>Create a form in the browser that when submitted would POST to the hypothetical URL "/signups", containing the following fields and validation rules. Use the appropriate field type for each field and validate the Form using the rules supplied. Use whatever technical approach to the validation that you deem most appropriate. The form should display errors and not submit if the validation rules are not met. The Form should be accessible and usable, and should be visually appealing with a focus on the hierarchy of elements.</p>
 </div>
