--- a/_projects/2015-05-02-project-quizzie.html
+++ b/_projects/2015-05-02-project-quizzie.html
@@ -9,6 +9,8 @@ image: "/assets/project-images/quizzie.jpg"
 </div>
 <div class="col-twothird">
   <h2>Spring 2014</h2>
-  <p>Practice using js and css to create an internet-style quizzie</p>
   <p><a href="http://codepen.io/jannypie/pen/DcHdo" class="button inline">See it on Codepen</a></p>
+  <p>Design, HTML, CSS/Scss</p>
+  <hr>
+  <p>Practice using JS and CSS to create an internet-style quizzie</p>  
 </div>
