--- a/_projects/2015-05-03-project-pure-css-bridge.html
+++ b/_projects/2015-05-03-project-pure-css-bridge.html
@@ -9,6 +9,8 @@ image: "/assets/project-images/pure-css-bridge.jpg"
 </div>
 <div class="col-twothird">
   <h2>Spring 2014</h2>
-  <p>Practice using SCSS to create digital art</p>
   <p><a href="http://codepen.io/jannypie/pen/lFysn" class="button inline">See it on Codepen</a></p>
+  <p>Design, HTML, CSS/Scss</p>
+  <hr>
+  <p>Practice using CSS to create digital art</p>
 </div>
