--- a/_projects/2015-05-08-project-pokedecks.html
+++ b/_projects/2015-05-08-project-pokedecks.html
@@ -2,9 +2,17 @@
 layout: "page"
 title: "Pokédecks Flashcard Game"
 meta-description: "Weekend team project at Dev Bootcamp"
-image: "/assets/project-images/pokedecks.jpg"
+image: "/assets/project-images/pokedecks.png"
 ---
-<p><a class="button" href="https://pokedecks.herokuapp.com" rel="bookmark" title="Link to project">Pokédecks Website</a> <a class="button" href="https://github.com/MaryCBaylis/TEAM-ROCKET-flash-cards" title="Pokedecks Github repo">GitHub Repo</a></p>
-<h2>Project Timespan: 3 days, April, 2015</h2>
-<p>Our team that built this project over a weekend as practice with complex modeling and associations in a database. We implemented a full Agile workflow with frequent standups and peer-pairing, task tracking and review, and a team retro. I implemented the UI as well as vertical slices for user CRUD and some game play.</p>
-<p>Built with: Ruby, Rails, Active Record, CSS</p>
+<div class="col-third">
+  <img src="/assets/project-images/pokedecks.png" alt="Pokedecks">
+</div>
+<div class="col-twothird">
+  <p>
+    <a class="button inline" href="https://pokedecks.herokuapp.com" rel="bookmark" title="Link to project">Pokédecks Website</a>
+    <a class="button inline" href="https://github.com/MaryCBaylis/TEAM-ROCKET-flash-cards" title="Pokedecks Github repo">GitHub Repo</a>
+  </p>
+  <h2>3 days, April, 2015</h2>
+  <p>Our team that built this project over a weekend as practice with complex modeling and associations in a database. We implemented a full Agile workflow with frequent standups and peer-pairing, task tracking and review, and a team retro. I implemented the UI as well as vertical slices for user CRUD and some game play.</p>
+  <p>Design, HTML, CSS, Ruby, Rails, Active Record/SQLite, Heroku, Travis CI, Agile</p>
+</div>
