add new project to workings

--- a/workings.html
+++ b/workings.html
@@ -4,6 +4,7 @@ title: "Web Development Projects"
 meta-description: "Web development portfolio by Jan Dennison"
 meta-robots: "noodp, noydir"
 ---
+<p><a href="/imlooking.html" class="button special teal">I'm available for hire!</a></p>
 <section class="container">
   {% for project in site.projects reversed %}
   <article class="featured post">
