update text on project description

--- a/_projects/2015-07-09-tweet-feature.html
+++ b/_projects/2015-07-09-tweet-feature.html
@@ -14,12 +14,10 @@ image: "/assets/project-images/tweets.png"
   <p>UX/Design, HAML, SASS, CSS3 Perspective &amp; Transforms, jQuery</p>
   <hr>
   <h3>Challenge</h3>
-  <p>Fill-in-the-blank Tweets was initially a concept I implemented at Abercrombie &amp; Fitch for their annual Jeans Guide Experience. Visitors could tweet using the #JeansAddict hash tag and ask questions for advice.</p>
+  <p>Fill-in-the-blank Tweets was initially a concept I implemented at Abercrombie &amp; Fitch for their annual Jeans Guide experience. Visitors could tweet using the #JeansAddict hash tag and ask for advice on fits and washes.</p>
   <p><img src="/assets/project-images/Tweet-Dialogue.png" alt="JeansAddict concept" /></p>
-  <p>I developed the JavaScript necessary for the implementation, and when it was live, several users made use of the feature.</p>
-  <p>
-    <img src="/assets/project-images/jeansaddict-example.png" alt="JeansAddict example" />
-  </p>
-  <p>For this CodePen prototype, I adapted the concept into a new UI with a cleaner dropdown effect using CSS3 Perspective and Transform. I also refactored the JavaScript as I found ways to make it cleaner and using fewer interactions with the DOM.</p>
+  <p>I wrote the JavaScript necessary for the implementation, as well as the markup and styling to fit mockups from design. When it was live, many visitors made use of the feature.</p>
+  <p><img src="/assets/project-images/jeansaddict-example.png" alt="JeansAddict example" /></p>
+  <p>For this CodePen prototype, I adapted the concept into a new UI with a different dropdown effect using CSS3 Perspective and Transform. I also refactored the JavaScript as I found ways to make it cleaner and have fewer interactions with the DOM.</p>
   </ul>
 </div>
