reorganize homepage to highlight featured projects vs codepens

--- a/_projects/2015-04-01-project-roster.html
+++ b/_projects/2015-04-01-project-roster.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Team Roster display using Etsy.com API"
 meta-description: "Retrieve team members and display their info from the Etsy API"
 image: "/assets/project-images/etsy-roster.png"
+categories: "featured"
 ---
 <div class="col-third">
   <img src="/assets/project-images/etsy-roster.png" alt="Etsy Roster">
