--- a/_projects/2015-05-02-project-quizzie.html
+++ b/_projects/2015-05-02-project-quizzie.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Quizzie in JS/CSS"
 meta-description: "Practice using js and css to create an internet-style quizzie"
 image: "/assets/project-images/quizzie.jpg"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/quizzie.jpg" alt="Quizzie">
@@ -12,5 +13,5 @@ image: "/assets/project-images/quizzie.jpg"
   <p><a href="http://codepen.io/jannypie/pen/DcHdo" class="button inline">See it on Codepen</a></p>
   <p>Design, HTML, CSS/Scss</p>
   <hr>
-  <p>Practice using JS and CSS to create an internet-style quizzie</p>  
+  <p>Practice using JS and CSS to create an internet-style quizzie</p>
 </div>
