--- a/_projects/2015-05-04-project-pure-css-taj-mahal.html
+++ b/_projects/2015-05-04-project-pure-css-taj-mahal.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Pure CSS Taj Mahal"
 meta-description: "Practice using SCSS to create digital art"
 image: "/assets/project-images/pure-css-taj.jpg"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/pure-css-taj.jpg" alt="Pure CSS Taj Mahal">
