--- a/_projects/2015-05-05-project-anf-parallax-experience.html
+++ b/_projects/2015-05-05-project-anf-parallax-experience.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Rising Stars A&amp;F Parallax Experience"
 meta-description: "Built extensive marketing experience page with parallaxing images at high FPS"
 image: "/assets/project-images/2014-anf-parallax.jpg"
+categories: "featured"
 ---
 <div class="col-third">
   <img src="/assets/project-images/2014-anf-parallax.jpg" alt="Spring 2014 Parallax">
