--- a/_projects/2015-05-06-project-anf-jeansguide.html
+++ b/_projects/2015-05-06-project-anf-jeansguide.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "A&amp;F Interactive Jeans Guide Experience"
 meta-description: "Created engaging interactions with featured jeans products for back-to-school marketing initiatives."
 image: "/assets/project-images/2014-jeans-guide-desktop.jpg"
+categories: "featured"
 ---
 <div class="col-third">
   <img src="/assets/project-images/2014-jeans-guide-desktop.jpg" alt="Summer 2014 Jeans Guide">
