--- a/_projects/2015-05-07-project-anf-responsive.html
+++ b/_projects/2015-05-07-project-anf-responsive.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Prototype Transition of Existing A&amp;F Mobile/Desktop Websites to Responsive Design &amp; Codebase"
 meta-description: "Prototyped merging mobile and desktop codebases and designs into unified responsive approach"
 image: "/assets/project-images/anf-pdp-mid.png"
+categories: "featured"
 ---
 <div class="col-third">
   <img src="/assets/project-images/anf-pdp-mid.png" alt="Screenshot of Responsive Project">
