--- a/_projects/2015-05-08-project-pokedecks.html
+++ b/_projects/2015-05-08-project-pokedecks.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Pokédecks Flashcard Game"
 meta-description: "Weekend team project at Dev Bootcamp"
 image: "/assets/project-images/pokedecks.png"
+categories: "featured"
 ---
 <div class="col-third">
   <img src="/assets/project-images/pokedecks.png" alt="Pokedecks">
