--- a/_projects/2015-05-09-project-devolio.html
+++ b/_projects/2015-05-09-project-devolio.html
@@ -4,6 +4,7 @@ excerpt: "As the Team Lead, I coordinated the project, as well as heading up the
 title: "DEVOLIO - Dev Portfolio"
 meta-description: "Final project for Dev Bootcamp Localhost"
 image: "/assets/project-images/devolio2.jpg"
+categories: "featured"
 ---
 <div class="col-third">
   <img src="/assets/project-images/devolio2.jpg" alt="Screenshot of Devolio">
