--- a/_projects/2015-06-04-project-todoapp.html
+++ b/_projects/2015-06-04-project-todoapp.html
@@ -4,6 +4,7 @@ excerpt: "A simple single-page app using jQuery, CSS and HTML"
 title: "TODO - Single Page App"
 meta-description: "A simple single-page app using jQuery, CSS and HTML"
 image: "/assets/project-images/todoapp.jpg"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/todoapp.jpg" alt="Single Page Todo App">
