--- a/_projects/2015-06-08-project-signupform.html
+++ b/_projects/2015-06-08-project-signupform.html
@@ -4,6 +4,7 @@ excerpt: "Code sample: Create a form that meets the requirements"
 title: "Signup Form Kata"
 meta-description: "Code sample: Create a form that meets the requirements"
 image: "/assets/project-images/signupform.jpg"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/signupform.jpg" alt="Single Page Twitter App">
