--- a/_projects/2015-06-16-hotel-app.html
+++ b/_projects/2015-06-16-hotel-app.html
@@ -4,6 +4,7 @@ excerpt: "Design a hotel app that syncs with customer smart home apps."
 title: "Smart Hotel App"
 meta-description: "Design a hotel app that syncs with customer smart home apps."
 image: "/assets/project-images/hotel.png"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/hotel.png" alt="Smart Hotel App">
