--- a/_projects/2015-07-09-tweet-feature.html
+++ b/_projects/2015-07-09-tweet-feature.html
@@ -4,6 +4,7 @@ excerpt: "Custom-built tweet feature with templates for user input."
 title: "Fill-in-the-Blank Twitter App"
 meta-description: "Custom-built tweet feature with templates for user input."
 image: "/assets/project-images/tweets.png"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/tweets.png" alt="Custom Twitter App">
