--- a/_projects/2015-05-03-project-pure-css-bridge.html
+++ b/_projects/2015-05-03-project-pure-css-bridge.html
@@ -3,6 +3,7 @@ layout: "page"
 title: "Pure CSS Golden Gate Bridge"
 meta-description: "Practice using SCSS to create digital art"
 image: "/assets/project-images/pure-css-bridge.jpg"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/pure-css-bridge.jpg" alt="Pure CSS Golden Gate Bridge">
