--- a/_projects/2015-06-05-project-jitterapp.html
+++ b/_projects/2015-06-05-project-jitterapp.html
@@ -4,6 +4,7 @@ excerpt: "A simple single-page app using Backbone.js, Sass and HTML"
 title: "Jitter - Single Page App"
 meta-description: "A simple single-page app using Backbone.js, Sass and HTML"
 image: "/assets/project-images/jitter.jpg"
+categories: "codepen"
 ---
 <div class="col-third">
   <img src="/assets/project-images/jitter.jpg" alt="Single Page Twitter App">
