modify meta description of devolio project

--- a/_projects/2015-05-09-project-devolio.html
+++ b/_projects/2015-05-09-project-devolio.html
@@ -2,7 +2,7 @@
 layout: "page"
 excerpt: "As the Team Lead, I coordinated the project, as well as heading up the UI, visual design and code, and the Backbone.js integration."
 title: "DEVOLIO - Dev Portfolio"
-meta-description: "Final project for Dev Bootcamp Localhost"
+meta-description: "Open Source project in Backbone.js/Rails/MongoDB"
 image: "/assets/project-images/devolio2.jpg"
 categories: "featured"
 ---
