correct description for new project:

--- a/_projects/2015-07-20-project-d3-force-map.html
+++ b/_projects/2015-07-20-project-d3-force-map.html
@@ -14,7 +14,7 @@ categories: "featured"
   <p><a class="button inline" href="https://github.com/jannypie/d3-force-directed-train-map" rel="bookmark" title="Link to repo">GitHub Repo</a>
     <a class="button inline" href="http://jandennison.com/d3-force-directed-train-map/" title="d3 map demo">Live Demo</a>
   </p>
-  <p>UX/Design, HTML, Scss, Ruby, Rails, Backbone.js, JavaScript / AJAX, MongoDB, d3.js, GitHub API, Twitter API, Bootstrap responsive grid (all other design and CSS custom), CoffeeScript, Heroku, Travis CI, Agile</p>
+  <p>Design, HTML, CSS, d3.js</p>
   <hr>
   <article class="markdown-body entry-content" itemprop="mainContentOfPage"><h1><a id="user-content-remote-island-train-map" class="anchor" href="#remote-island-train-map" aria-hidden="true"><span class="octicon octicon-link"></span></a>Remote Island Train Map</h1>
 
